--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="col logo">Logo</div>
                 <div class="col menu">
                     <nav>
-                        <ul>
+                        <ul class="nav">
                             <li>
                                 <a href="#">Home</a>
                             </li>
@@ -29,7 +29,16 @@
         </div>
     </header>
     <main>
-
+        <div class="container">
+            <ul class="list">
+                <li>
+                    <a href="http://www.codeproject.com/Tips/5260897/Advanced-GIT-Tutorial-Cherry-Pick-  vs-Rebase-vs-Mer">Cherry pick vs rebase vs merge, URL</a>
+                </li>
+                <li>
+                    <a href="http://www.atlassian.com/ru/git/tutorials/saving-changes/git-stash">Git stash, URL</a>
+                </li>
+            </ul>
+        </div>
     </main>
     <footer>
 
